@startuml ClassDiagram_DarkWebMonitoring

' Modele de donnees de Sentinel (app/models/__init__.py).
' CN-03 / CN-04 : seules des metadonnees sont stockees - aucune donnee
' divulguee, aucun nom de personne, aucun extrait d'annonce.

skinparam classAttributeIconSize 0
hide empty methods

package "Expositions" {

  class Exposition {
    +id : UUID
    +nom_entite : str
    +criticite : int
    +niveau_criticite : NiveauCriticite
    +statut : StatutExposition
    +date_premiere_detection : datetime
    +date_derniere_detection : datetime
    +date_publication_source : datetime
    --
    +changer_statut(nouveau_statut)
  }

  class SourceReference {
    +id : UUID
    +type_source : TypeSource
    +reference_source : str
    +date_publication : datetime
    +date_signalement : datetime
    +texte_brut : str
    +date_texte_brut : datetime
    +selecteurs_trouves : json
  }

  class Categorie {
    +id : UUID
    +nom : str
    +description : str
    +lieu_generique : bool
    +prioritaire : bool
    +date_creation : datetime
  }

  class Selecteur {
    +id : UUID
    +valeur : str
    +actif : bool
    +poids : int
  }

  class ExclusionFauxPositif {
    +id : UUID
    +motif : str
    +type_exclusion : TypeExclusion
    +actif : bool
    +commentaire : str
    +ajoute_par : str
    +date_ajout : datetime
  }

  class Alerte {
    +id : UUID
    +canal : CanalAlerte
    +statut_envoi : StatutEnvoiAlerte
    +date_creation : datetime
    +date_envoi : datetime
    +lue : bool
    +details_echec : str
  }
}

package "Collecte" {

  class Source {
    +id : UUID
    +nom : str
    +type_source : TypeSource
    +url_ou_identifiant : str
    +derniere_collecte_reussie : datetime
    +nombre_erreurs : int
    +actif : bool
    --
    +est_indisponible() : bool
  }

  class EntreeCollectee {
    +id : UUID
    +identifiant_entree : str
    +statut_detail : StatutDetailEntree
    +date_premiere_vue : datetime
    +date_derniere_vue : datetime
    +date_detail_traite : datetime
    +nb_echecs_detail : int
    +a_produit_exposition : bool
    +signature_listing : str
  }

  class JournalAudit <<file circulaire, 1000 lignes>> {
    +id : UUID
    +horodatage : datetime
    +resultat : ResultatAudit
    +details : str
  }

  class EtatScheduler <<ligne unique>> {
    +actif : bool
    +statut : StatutScheduler
    +pid : int
    +heartbeat : datetime
    +source_en_cours : str
    +prochaine_execution : datetime
    +debut_collecte : datetime
    +fin_collecte : datetime
    +ip_sortie : str
    +collecte_immediate_demandee : bool
    +verification_ip_demandee : bool
    +version_code : str
  }

  class EvenementCollecte {
    +id : int
    +horodatage : datetime
    +type_evenement : TypeEvenementCollecte
    +source : str
    +message : str
  }
}

package "Administration" {

  class User {
    +id : UUID
    +nom_utilisateur : str
    +mot_de_passe_hash : str
    +role : RoleUtilisateur
    +actif : bool
    +date_creation : datetime
  }

  class HistoriqueRole {
    +id : UUID
    +ancien_role : RoleUtilisateur
    +nouveau_role : RoleUtilisateur
    +date_modification : datetime
  }

  class ConfigurationSysteme {
    +cle : str
    +valeur : str
    +description : str
  }
}

enum NiveauCriticite {
  FAIBLE
  MOYENNE
  ELEVEE
  CRITIQUE
}

enum StatutExposition {
  NEW
  UNDER_REVIEW
  CONFIRMED
  FALSE_POSITIVE
  NOTIFIED
  CLOSED
}

enum RoleUtilisateur {
  USER
  SUPERVISOR
  ADMIN
  SUPER_ADMIN
}

Exposition "1" *-- "1..*" SourceReference : signalee par >
SourceReference "0..*" --> "0..1" Source : provient de >
Exposition "0..*" -- "0..*" Categorie : exposition_categories
Selecteur "0..*" --> "1" Categorie : appartient a >
Exposition "1" *-- "0..*" Alerte : declenche >
Source "1" -- "0..*" JournalAudit : historique >
Source "1" -- "0..*" EntreeCollectee : registre du crawl >
ExclusionFauxPositif "0..*" --> "0..1" Source : portee >
EvenementCollecte "0..*" --> "0..1" Exposition : annonce >
User "1" -- "0..*" HistoriqueRole : cible / auteur >

note right of Categorie
  Les categories d'une exposition sont
  celles des selecteurs trouves (FR-13).
  prioritaire : canaux d'alerte renforces (FR-26).
  lieu_generique : regle "liste de pays" (FR-11).
end note

note bottom of Exposition
  criticite = score des selecteurs
  DISTINCTS trouves, chacun compte
  pour son poids (FR-10) ;
  ne diminue jamais.
  Faux positif / Cloturee : l'exposition
  passe en Archives (filtre, rien n'est
  supprime ni deplace).
end note

note right of EntreeCollectee
  Registre du crawl incremental, jamais
  un index de victimes (CN-03/CN-04).
  signature_listing : sha256 du VOLUME
  annonce par le listing (nb de posts,
  date) - une entree dont elle change
  voit sa page de detail relue.
end note

note bottom of SourceReference
  texte_brut / selecteurs_trouves :
  derogation CN-04/CN-05 validee le
  2026-09-18, texte masque de la seule
  annonce ayant produit l'exposition,
  lisible par superviseur+ uniquement
  (app/conservation.py).
end note

@enduml
